feat: v2.5.4 — GC 로그 메모리 압박 Full GC 분류·배너 + AI 프롬프트/응답 보완 + 스캔 대상 선택·재분석 확인
GC 로그 엔진·결과
- Full GC 분류 FullGcKind(명시적/Metaspace/GCLocker/힙 압박/기타) + fullGcSummary
  (압박 원인 분포·회수율·직후 점유율·간격 추세·차트 점·최저 회수 표본, 옛 JSON 은 null)
- 소견 FULL_GC_LOW_RECLAIM · FULL_GC_INTERVAL_SHRINKING 신설, FULL_GC_FREQUENT 분류 문장
- 결과 페이지 압박 배너(5상태) · KPI 압박/명시적 분리 · 이벤트 분류 배지·'해당 이벤트 보기' · 힙 차트 ▲
- gc_log_analysis.pressure_full_gc_count 컬럼 + 목록 '(압박 n)' (forgetAnalysis 에서도 초기화)
- AI 프롬프트 '== Full GC 분류 ==' 섹션·압박 노트, GcAiResponseNormalizer(severity·권고 리스트·길이 상한)
- 재분석 확인 모달, 인스턴스 카드 → 서버 옆 헤더 알약(분석 전·실패 화면에서도 입력)

Target Servers·스캔
- 스캔 대상 선택 흰 팝오버(힙 덤프·코어 파일·GC 로그) + POST /scan?types= (서버 설정 안에서만 좁힘,
  NO_SCAN_TARGET 은 연결 상태를 FAIL 로 바꾸지 않음)
- 덤프 경로 툴팁 복구(float-tooltip.js 로드 누락 — 실패 사유 툴팁도 함께), 경로 번호 목록
- 전송 재시도 시 진행바·실패 문구가 쌓이던 버그 수정, 경로·크기·상태·오류 글자 크기 상향

- 합성 압박 픽스처(synthetic-jdk8-parallel-pressure.log, .gitignore 예외), 테스트 826건
- 버전 2.5.3 → 2.5.4 (pom·banner·index·progress), CLAUDE.md 함정 58, CHANGELOG

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>